# autonomous-returns-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
src/returns_agent/: graph.py  llm.py  main.py  models.py  nodes.py  policy.py  prompts.py  state.py  tools.py  trace.py
tests/: deterministic_llm.py  golden_cases.jsonl  test_agent.py  test_golden.py  test_live_agent.py  test_policy.py  test_tools.py
